--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
                 <p><strong>Learnings:</strong> Building this project helped me solidify my understanding of full-stack data flow and user authentication principles.</p>
                 <a href="YOUR_LIVE_DEMO_URL" target="_blank">Live Demo (Coming Soon!)</a> | <a href="YOUR_GITHUB_REPO_URL" target="_blank">GitHub Repo (Coming Soon!)</a>
             </div>
+
+            <div class="project-item">
+                <h3>Task Manager CLI</h3>
+                <p>A simple and efficient command-line task management tool built with Node.js and SQLite.</p>
+                <p><strong>Key Features:</strong> Add tasks with due dates and priority levels, list and filter tasks, mark tasks as complete, edit and delete tasks</p>
+                <p><strong>Technologies:</strong> Node.js, SQLite3, Command Line Interface</p>
+                <p><strong>Learnings:</strong> Developed a practical understanding of CLI development, database management with SQLite, and command-line argument parsing.</p>
+                <a href="https://github.com/tangerine0000/task-manager-cli" target="_blank">GitHub Repo</a>
+            </div>
             </section>
 
         <section id="contact">
