Add URL Shortener API project to portfolio

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
                 <p><strong>Learnings:</strong> Developed a practical understanding of CLI development, database management with SQLite, and command-line argument parsing.</p>
                 <a href="https://github.com/tangerine0000/task-manager-cli" target="_blank">GitHub Repo</a>
             </div>
+
+            <div class="project-item">
+                <h3>URL Shortener API</h3>
+                <p>A RESTful API service that shortens long URLs into more manageable short URLs, built with Node.js, Express, and MongoDB.</p>
+                <p><strong>Key Features:</strong> Create short URLs, redirect to original URLs, track URL statistics, update and delete short URLs, duplicate URL detection</p>
+                <p><strong>Technologies:</strong> Node.js, Express, MongoDB, RESTful API</p>
+                <p><strong>Learnings:</strong> Gained experience in building RESTful APIs, database design with MongoDB, and implementing URL shortening algorithms.</p>
+                <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a>
+            </div>
             </section>
 
         <section id="contact">
