Add demo website link to URL Shortener API project

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p><strong>Key Features:</strong> Create short URLs, redirect to original URLs, track URL statistics, update and delete short URLs, duplicate URL detection</p>
                 <p><strong>Technologies:</strong> Node.js, Express, MongoDB, RESTful API</p>
                 <p><strong>Learnings:</strong> Gained experience in building RESTful APIs, database design with MongoDB, and implementing URL shortening algorithms.</p>
-                <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a>
+                <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a> | <a href="https://tanurl.netlify.app/" target="_blank">Website for demo</a>
             </div>
             </section>
 
