--- a/index.html
+++ b/index.html
@@ -4,70 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tan Nguyen - Portfolio</title>
+    <meta http-equiv="refresh" content="0;url=about.html">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <header>
-        <nav>
-            <h1>Tan Nguyen</h1>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I am an aspiring full-stack developer and AI expert. I'm learning to code to bring my crazy world in my thought become visibility to my eyes. Currently, I'm focusing on Javascript, Node.js and modern full-stack, web development related frameworks.</p>
-        </section>
-
-        <section id="projects">
-            <h2>My Projects</h2>
-            <div class="project-item">
-                <h3>A Library of a Person</h3>
-                <img src="images/library-of-person-screenshot.png" alt="Screenshot of A Library of a Person blog (Coming Soon!)" style="max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 5px;">
-                <p>This is where I share with you my learning, not limited on any subjects, but currently, I focus on Software Engineer.</p>
-                <p><strong>Key Features:</strong> Users can read and search articles, admin panel for post management</p>
-                <p><strong>Technologies:</strong> Frontend: HTML, CSS, JS | Backend: Node.js/Express | Database: PostgreSQL</p>
-                <p><strong>Learnings:</strong> Building this project helped me solidify my understanding of full-stack data flow and user authentication principles.</p>
-                <a href="YOUR_LIVE_DEMO_URL" target="_blank">Live Demo (Coming Soon!)</a> | <a href="YOUR_GITHUB_REPO_URL" target="_blank">GitHub Repo (Coming Soon!)</a>
-            </div>
-
-            <div class="project-item">
-                <h3>Task Manager CLI</h3>
-                <p>A simple and efficient command-line task management tool built with Node.js and SQLite.</p>
-                <p><strong>Key Features:</strong> Add tasks with due dates and priority levels, list and filter tasks, mark tasks as complete, edit and delete tasks</p>
-                <p><strong>Technologies:</strong> Node.js, SQLite3, Command Line Interface</p>
-                <p><strong>Learnings:</strong> Developed a practical understanding of CLI development, database management with SQLite, and command-line argument parsing.</p>
-                <a href="https://github.com/tangerine0000/task-manager-cli" target="_blank">GitHub Repo</a>
-            </div>
-
-            <div class="project-item">
-                <h3>URL Shortener API</h3>
-                <p>A RESTful API service that shortens long URLs into more manageable short URLs, built with Node.js, Express, and MongoDB.</p>
-                <p><strong>Key Features:</strong> Create short URLs, redirect to original URLs, track URL statistics, update and delete short URLs, duplicate URL detection</p>
-                <p><strong>Technologies:</strong> Node.js, Express, MongoDB, RESTful API</p>
-                <p><strong>Learnings:</strong> Gained experience in building RESTful APIs, database design with MongoDB, and implementing URL shortening algorithms.</p>
-                <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a> | <a href="https://tanurl.netlify.app/" target="_blank">Website for demo</a>
-            </div>
-            </section>
-
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Feel free to reach out:</p>
-            <p>Email: <a href="mailto:tan.personal.mail@gmail.com">tan.personal.mail@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/sperc/" target="_blank">My Linkedin Profile</a></p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <p>If you are not redirected automatically, <a href="about.html">click here</a>.</p>
 </body>
 </html>
