Update portfolio: Enhanced about page with education and background info, improved contact form, and consistent styling across pages

--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Tan Nguyen</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,12 +24,47 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am an aspiring full-stack developer and AI expert. I'm learning to code to bring my crazy world in my thought become visibility to my eyes. Currently, I'm focusing on Javascript, Node.js and modern full-stack, web development related frameworks.</p>
+            <div class="about-content">
+                <div class="about-text">
+                    <div class="education">
+                        <h3>Education</h3>
+                        <p>I graduated from Ho Chi Minh City University of Science (HCMUS) with a degree in Computer Science, specializing in Artificial Intelligence. My academic background has provided me with a strong foundation in both theoretical and practical aspects of computer science.</p>
+                    </div>
+                    
+                    <div class="background">
+                        <h3>Professional Background</h3>
+                        <p>I am an aspiring full-stack developer and AI expert. My journey in technology began with a focus on Artificial Intelligence, and I'm now expanding my expertise into software engineering. I'm passionate about bringing innovative ideas to life through code, transforming abstract concepts into tangible applications.</p>
+                        <p>Currently, I'm focusing on modern web development technologies, particularly JavaScript, Node.js, and full-stack frameworks. This shift allows me to combine my AI knowledge with practical software development skills, creating more comprehensive and impactful solutions.</p>
+                    </div>
+
+                    <div class="skills">
+                        <h3>Skills & Technologies</h3>
+                        <div class="skill-tags">
+                            <span>JavaScript</span>
+                            <span>Node.js</span>
+                            <span>Express</span>
+                            <span>MongoDB</span>
+                            <span>SQLite</span>
+                            <span>RESTful APIs</span>
+                            <span>CLI Development</span>
+                            <span>Artificial Intelligence</span>
+                            <span>Machine Learning</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+        <div class="footer-content">
+            <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
+                <a href="mailto:tan.personal.mail@gmail.com">Email</a>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
