--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Tan Nguyen</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -19,16 +23,52 @@
     </header>
 
     <main>
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Feel free to reach out:</p>
-            <p>Email: <a href="mailto:tan.personal.mail@gmail.com">tan.personal.mail@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/sperc/" target="_blank">My Linkedin Profile</a></p>
+        <section id="contact" class="contact-section">
+            <h2>Get in Touch</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:tan.personal.mail@gmail.com">tan.personal.mail@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn Profile</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/tangerine0000" target="_blank">GitHub Profile</a>
+                    </div>
+                </div>
+                <form id="contact-form" class="contact-form">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+        <div class="footer-content">
+            <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
+                <a href="mailto:tan.personal.mail@gmail.com">Email</a>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
