--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Tan Nguyen</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,7 +24,7 @@
     <main>
         <section id="projects">
             <h2>My Projects</h2>
-            <div class="project-item">
+            <!-- <div class="project-item">
                 <h3>A Library of a Person</h3>
                 <img src="images/library-of-person-screenshot.png" alt="Screenshot of A Library of a Person blog (Coming Soon!)" style="max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 5px;">
                 <p>This is where I share with you my learning, not limited on any subjects, but currently, I focus on Software Engineer.</p>
@@ -29,7 +32,7 @@
                 <p><strong>Technologies:</strong> Frontend: HTML, CSS, JS | Backend: Node.js/Express | Database: PostgreSQL</p>
                 <p><strong>Learnings:</strong> Building this project helped me solidify my understanding of full-stack data flow and user authentication principles.</p>
                 <a href="YOUR_LIVE_DEMO_URL" target="_blank">Live Demo (Coming Soon!)</a> | <a href="YOUR_GITHUB_REPO_URL" target="_blank">GitHub Repo (Coming Soon!)</a>
-            </div>
+            </div> -->
 
             <div class="project-item">
                 <h3>Task Manager CLI</h3>
@@ -46,13 +49,20 @@
                 <p><strong>Key Features:</strong> Create short URLs, redirect to original URLs, track URL statistics, update and delete short URLs, duplicate URL detection</p>
                 <p><strong>Technologies:</strong> Node.js, Express, MongoDB, RESTful API</p>
                 <p><strong>Learnings:</strong> Gained experience in building RESTful APIs, database design with MongoDB, and implementing URL shortening algorithms.</p>
-                <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a> | <a href="https://tanurl.netlify.app/" target="_blank">Website for demo</a>
+                <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a> <a href="https://tanurl.netlify.app/" target="_blank">Website for demo</a>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+        <div class="footer-content">
+            <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
+                <a href="mailto:tan.personal.mail@gmail.com">Email</a>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
