--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Tan Nguyen - Portfolio</title>
     <meta http-equiv="refresh" content="0;url=about.html">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <button class="theme-switcher" aria-label="Switch theme">
+        <i class="fas fa-palette"></i>
+    </button>
     <p>If you are not redirected automatically, <a href="about.html">click here</a>.</p>
+    <script src="script.js"></script>
 </body>
 </html>
