--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,33 @@
                 <p><strong>Learnings:</strong> Gained experience in building RESTful APIs, database design with MongoDB, and implementing URL shortening algorithms.</p>
                 <a href="https://github.com/tangerine0000/url-shortener-api" target="_blank">GitHub Repo</a> <a href="https://tanurl.netlify.app/" target="_blank">Website for demo</a>
             </div>
+
+            <div class="project-item">
+                <h3>AI Chatbot with Memory</h3>
+                <p>A conversational AI chatbot built with Streamlit, LangChain, and Ollama that remembers conversation history.</p>
+                <p><strong>Key Features:</strong> Natural language processing, context-aware responses, conversation memory, interactive chat interface</p>
+                <p><strong>Technologies:</strong> Python, Streamlit, LangChain, Ollama, AI/ML</p>
+                <p><strong>Learnings:</strong> Developed expertise in building conversational AI systems, implementing memory mechanisms, and creating interactive web applications with Streamlit.</p>
+                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">GitHub Repo</a>
+            </div>
+
+            <div class="project-item">
+                <h3>AI-Powered Web Scraper</h3>
+                <p>An intelligent web scraper that can extract and summarize content from any website using AI capabilities.</p>
+                <p><strong>Key Features:</strong> Content extraction, automatic summarization, intelligent data processing, user-friendly interface</p>
+                <p><strong>Technologies:</strong> Python, Streamlit, LangChain, Web Scraping, AI/ML</p>
+                <p><strong>Learnings:</strong> Gained experience in web scraping, content processing, and building AI-powered data extraction tools.</p>
+                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">GitHub Repo</a>
+            </div>
+
+            <div class="project-item">
+                <h3>AI Web Scraper with FAISS</h3>
+                <p>An advanced web scraper that stores content in a FAISS vector database for semantic search and Q&A capabilities.</p>
+                <p><strong>Key Features:</strong> Vector storage, semantic search, Q&A functionality, efficient content retrieval</p>
+                <p><strong>Technologies:</strong> Python, Streamlit, LangChain, FAISS, Vector Databases, AI/ML</p>
+                <p><strong>Learnings:</strong> Mastered vector database implementation, semantic search techniques, and building advanced AI-powered search systems.</p>
+                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">GitHub Repo</a>
+            </div>
         </section>
     </main>
 
