--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Tan Nguyen</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,13 +15,13 @@
     <button class="theme-switcher" aria-label="Switch theme">
         <i class="fas fa-palette"></i>
     </button>
-    <header>
-        <nav>
-            <h1>Tan Nguyen</h1>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+    <header class="fixed top-0 left-1/2 -translate-x-1/2 w-full z-50 flex justify-center p-2">
+        <nav class="w-full max-w-4xl mx-auto px-8 py-6 flex flex-row items-center justify-between bg-[var(--nav-bg)] rounded-3xl shadow-lg transition-all duration-300 ease-in-out" id="mainNav">
+            <h1 class="text-3xl font-bold text-[var(--primary-color)] transition-all duration-300">Tan Nguyen</h1>
+            <ul class="flex gap-8">
+                <li><a href="about.html" class="text-[var(--text-color)] no-underline font-medium px-6 py-4 rounded-lg transition-all duration-300 hover:text-[var(--primary-color)] hover:bg-[var(--section-bg)] hover:-translate-y-0.5">About</a></li>
+                <li><a href="projects.html" class="text-[var(--text-color)] no-underline font-medium px-6 py-4 rounded-lg transition-all duration-300 hover:text-[var(--primary-color)] hover:bg-[var(--section-bg)] hover:-translate-y-0.5">Projects</a></li>
+                <li><a href="contact.html" class="text-[var(--text-color)] no-underline font-medium px-6 py-4 rounded-lg transition-all duration-300 hover:text-[var(--primary-color)] hover:bg-[var(--section-bg)] hover:-translate-y-0.5">Contact</a></li>
             </ul>
         </nav>
     </header>
