--- a/about.html
+++ b/about.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Tan Nguyen</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Tan Nguyen - Portfolio</title>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <button class="theme-switcher" aria-label="Switch theme">
-        <i class="fas fa-palette"></i>
-    </button>
-    <header class="fixed top-0 left-1/2 -translate-x-1/2 w-full z-50 flex justify-center p-2">
-        <nav class="w-full max-w-4xl mx-auto px-8 py-6 flex flex-row items-center justify-between bg-[var(--nav-bg)] rounded-3xl shadow-lg transition-all duration-300 ease-in-out" id="mainNav">
-            <h1 class="text-3xl font-bold text-[var(--primary-color)] transition-all duration-300">Tan Nguyen</h1>
-            <ul class="flex gap-8">
-                <li><a href="about.html" class="text-[var(--text-color)] no-underline font-medium px-6 py-4 rounded-lg transition-all duration-300 hover:text-[var(--primary-color)] hover:bg-[var(--section-bg)] hover:-translate-y-0.5">About</a></li>
-                <li><a href="projects.html" class="text-[var(--text-color)] no-underline font-medium px-6 py-4 rounded-lg transition-all duration-300 hover:text-[var(--primary-color)] hover:bg-[var(--section-bg)] hover:-translate-y-0.5">Projects</a></li>
-                <li><a href="contact.html" class="text-[var(--text-color)] no-underline font-medium px-6 py-4 rounded-lg transition-all duration-300 hover:text-[var(--primary-color)] hover:bg-[var(--section-bg)] hover:-translate-y-0.5">Contact</a></li>
+    <header>
+        <nav>
+            <h1>Tan's Portfolio</h1>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <button class="theme-switcher" aria-label="Toggle theme">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
+        </svg>
+    </button>
 
     <main>
         <section id="about">
@@ -59,19 +61,36 @@
                 </div>
             </div>
         </section>
+
+        <section id="projects">
+            <h2>My Projects</h2>
+            <div class="project-item">
+                <h3>Project 1</h3>
+                <p>Description of project 1</p>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                        </svg>
+                        <span>email@example.com</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
-            <div class="social-links">
-                <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
-                <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
-                <a href="mailto:tan.personal.mail@gmail.com">Email</a>
-            </div>
+            <p>&copy; 2024 Tan's Portfolio. All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html> 
