--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Tan Nguyen</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <button class="theme-switcher" aria-label="Switch theme">
+        <i class="fas fa-palette"></i>
+    </button>
     <header>
         <nav>
-            <h1>Tan's Portfolio</h1>
+            <h1>Tan Nguyen</h1>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -22,48 +25,55 @@
         </nav>
     </header>
 
-    <button class="theme-switcher" aria-label="Toggle theme">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
-        </svg>
-    </button>
-
     <main>
-        <section id="contact">
-            <h2>Contact Me</h2>
+        <section id="contact" class="contact-section">
+            <h2>Get in Touch</h2>
             <div class="contact-container">
                 <div class="contact-info">
+                    <h3>Contact Information</h3>
                     <div class="contact-item">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
-                        </svg>
-                        <span>tan.personal.mail@gmail.com</span>
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:tan.personal.mail@gmail.com">tan.personal.mail@gmail.com</a>
                     </div>
                     <div class="contact-item">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
-                        </svg>
-                        <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn Profile</a>
                     </div>
                     <div class="contact-item">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-                            <circle cx="4" cy="4" r="2"></circle>
-                        </svg>
-                        <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/tangerine0000" target="_blank">GitHub Profile</a>
                     </div>
                 </div>
+                <form id="contact-form" class="contact-form">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 Tan's Portfolio. All rights reserved.</p>
+            <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
+                <a href="mailto:tan.personal.mail@gmail.com">Email</a>
+            </div>
         </div>
     </footer>
 
-    <script type="module" src="js/main.js"></script>
+    <script src="script.js"></script>
 </body>
-</html> 
 </html> 
