--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tan Nguyen - Portfolio</title>
     <meta http-equiv="refresh" content="0;url=about.html">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <button class="theme-switcher" aria-label="Switch theme">
+        <i class="fas fa-palette"></i>
+    </button>
     <p>If you are not redirected automatically, <a href="about.html">click here</a>.</p>
+    <div class="project-item">
+        <h3>AI Chatbot with Memory</h3>
+        <p>A conversational AI chatbot built with Streamlit, LangChain, and Ollama that remembers conversation history. Features include natural language processing and context-aware responses.</p>
+        <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">View Project</a>
+    </div>
+    <div class="project-item">
+        <h3>AI-Powered Web Scraper</h3>
+        <p>An intelligent web scraper that can extract and summarize content from any website. Built with Streamlit and LangChain for efficient content processing and analysis.</p>
+        <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">View Project</a>
+    </div>
+    <div class="project-item">
+        <h3>AI Web Scraper with FAISS</h3>
+        <p>An advanced web scraper that stores content in a FAISS vector database for semantic search and Q&A capabilities. Features include vector storage and semantic search functionality.</p>
+        <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">View Project</a>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
