--- a/projects.html
+++ b/projects.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Tan Nguyen</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <button class="theme-switcher" aria-label="Switch theme">
+        <i class="fas fa-palette"></i>
+    </button>
     <header>
         <nav>
-            <h1>Tan's Portfolio</h1>
+            <h1>Tan Nguyen</h1>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -21,12 +24,6 @@
             </ul>
         </nav>
     </header>
-
-    <button class="theme-switcher" aria-label="Toggle theme">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
-        </svg>
-    </button>
 
     <main>
         <section id="projects">
@@ -61,27 +58,36 @@
 
             <div class="project-item">
                 <h3>AI Chatbot with Memory</h3>
-                <p>A conversational AI chatbot built with Streamlit, LangChain, and Ollama that remembers conversation history. Features include natural language processing and context-aware responses.</p>
-                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">View Project</a>
+                <p>A conversational AI chatbot built with Streamlit, LangChain, and Ollama that remembers conversation history.</p>
+                <p><strong>Key Features:</strong> Natural language processing, context-aware responses, conversation memory, interactive chat interface</p>
+                <p><strong>Technologies:</strong> Python, Streamlit, LangChain, Ollama, AI/ML</p>
+                <p><strong>Learnings:</strong> Developed expertise in building conversational AI systems, implementing memory mechanisms, and creating interactive web applications with Streamlit.</p>
+                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">GitHub Repo</a>
             </div>
 
             <div class="project-item">
                 <h3>AI-Powered Web Scraper</h3>
-                <p>An intelligent web scraper that can extract and summarize content from any website. Built with Streamlit and LangChain for efficient content processing and analysis.</p>
-                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">View Project</a>
+                <p>An intelligent web scraper that can extract and summarize content from any website using AI capabilities.</p>
+                <p><strong>Key Features:</strong> Content extraction, automatic summarization, intelligent data processing, user-friendly interface</p>
+                <p><strong>Technologies:</strong> Python, Streamlit, LangChain, Web Scraping, AI/ML</p>
+                <p><strong>Learnings:</strong> Gained experience in web scraping, content processing, and building AI-powered data extraction tools.</p>
+                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">GitHub Repo</a>
             </div>
 
             <div class="project-item">
                 <h3>AI Web Scraper with FAISS</h3>
-                <p>An advanced web scraper that stores content in a FAISS vector database for semantic search and Q&A capabilities. Features include vector storage and semantic search functionality.</p>
-                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">View Project</a>
+                <p>An advanced web scraper that stores content in a FAISS vector database for semantic search and Q&A capabilities.</p>
+                <p><strong>Key Features:</strong> Vector storage, semantic search, Q&A functionality, efficient content retrieval</p>
+                <p><strong>Technologies:</strong> Python, Streamlit, LangChain, FAISS, Vector Databases, AI/ML</p>
+                <p><strong>Learnings:</strong> Mastered vector database implementation, semantic search techniques, and building advanced AI-powered search systems.</p>
+                <a href="https://github.com/tangerine0000/ai-agents-playground" target="_blank">GitHub Repo</a>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 Tan's Portfolio. All rights reserved.</p>
+            <p>&copy; 2025 Tan Nguyen. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://github.com/tangerine0000" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/sperc/" target="_blank">LinkedIn</a>
@@ -90,6 +96,6 @@
         </div>
     </footer>
 
-    <script type="module" src="js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
